tests/expected_invalid_hazard_generic_fn.diag.out
<input>:2:20: error: this module kind must not declare user-defined generics on `fn`
    public fn identity<T>(value: T) -> T {
                       ^
